# MNIST_neural_network

./: CMakeLists.txt  vcpkg.json
MNIST_neural_network/: CMakeLists.txt  MNIST_neural_network.cpp  MNIST_neural_network.hpp  gpu_matrix_op.cpp  gpu_matrix_op.hpp  matrix_mult.cpp  matrix_mult.hpp  mnist_reader_less.hpp  neural_network.hpp
MNIST_neural_network/nn_states/: NeuralNetworkDumpFile_l3_i784_784_50_10.nn
MNIST_neural_network/shaders/: calculate_dC_dWl_float.comp  calculate_dC_dZ_BCE_sigmoid_float.comp  calculate_dC_dZl_previous_float.comp  calculate_dC_dbl_float.comp  matrix_add_constant_vec_float.comp  matrix_add_double.comp  matrix_add_float.comp  matrix_columns_compress_float.comp  matrix_mult.comp  matrix_mult_double.comp  matrix_mult_float.comp  sigmoid_activation_double.comp  sigmoid_activation_float.comp
